--- a/Dynamic_Scraper.ipynb
+++ b/Dynamic_Scraper.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a3446b42",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "import time\n",
     "import pandas as pd\n",
     "import re\n",
+    "\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
     "from getpass import getpass\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "79409084-ca62-4557-b055-6666e71f0dd6",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = semesters[\"Spring Semester 2024\"]\n",
+    "url = semesters[\"Fall Semester 2024\"]\n",
     "driver.execute_script(url);\n",
     "time.sleep(5)"
    ]
@@ -133,10 +134,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "body = driver.page_source\n",
+    "soup = BeautifulSoup(body, 'html.parser')\n",
+    "\n",
+    "# get the number of results\n",
+    "result_element = soup.find('span', id='MSU_RSLT_NAV_WK_PTPG_ROWS_GRID')\n",
+    "# Extract the text content\n",
+    "result_text = result_element.get_text(strip=True)\n",
+    "result = int(result_text.split()[0])\n",
+    "pages = (result + 49) // 50# get the number of aggregated pages\n",
+    "\n",
     "def get_class_info(soup):\n",
     "    '''Scrape entire page for all of the class boxes'''\n",
+    "    \n",
     "    reshaped_list = []\n",
     "    cells = soup.find_all(\"tr\", class_=\"ps_grid-row psc_rowact\") # Find all table row in the page (Classes)\n",
+    "    if pages > 1:\n",
+    "        for i in range(pages - 1):\n",
+    "            url = f\"javascript:submitAction_win0(document.win0,'MSU_RSLT_NAV_WK_SEARCH_CONDITION2$46$');\"\n",
+    "            driver.execute_script(url)\n",
+    "            time.sleep(5)\n",
+    "            body = driver.page_source\n",
+    "            next_soup = BeautifulSoup(body, 'html.parser')\n",
+    "            cells += next_soup.find_all(\"tr\", class_=\"ps_grid-row psc_rowact\")\n",
+    "    \n",
     "    for cell in cells:\n",
     "        values = cell.text.split(\"\\n\") # Split text in a cell \n",
     "        values = list(filter(lambda x: x != \"\", values))  \n",
@@ -178,7 +199,7 @@
     "    df[['Section', 'Class Nbr', 'Academic Session']] = df['Section'].str.split('/', n=2, expand=True)\n",
     "    df[['Units','Status']] = df['Units'].str.split(')',n=1,expand=True)\n",
     "    df[['Subject','Course Number']] = df['Course Code'].str.split(' ',n=1,expand=True)\n",
-    "    df['Dates'] = df['Dates'].apply(lambda x: x.replace(\"Approval Required\", '').strip() if not isinstance(x, list) else x)\n",
+    "    df['Dates'] = df['Dates'].apply(lambda x: x.replace(\"Approval Required\", '').strip() if x else x)\n",
     "    df['Status'] = df['Status'].str.replace('Reserved Capacity', '').str.strip()\n",
     "    \n",
     "    #df['Dates'] = df['Dates'].str.replace('Approval Required', '').str.strip()\n",
@@ -193,8 +214,6 @@
     "    df['Class Nbr'] = df['Class Nbr'].str.extract(r'(\\d+(?:\\.\\d+)?)')\n",
     "    return df\n",
     "\n",
-    "body = driver.page_source\n",
-    "soup = BeautifulSoup(body, 'html.parser')\n",
     "df = get_class_info(soup)  # getting info on the first page"
    ]
   },
@@ -221,66 +240,32 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"Spring2024.csv\", index=False)"
+    "df.to_csv(\"Fall2024.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68553b45-e0f8-484e-9f87-724934e9fa91",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "id": "19befd18-ff47-4e60-bbf6-9be100ce56cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Spring2024.csv\")\n",
+    "df = pd.read_csv(\"Fall2024.csv\")\n",
     "\n",
-    "url = \"https://student.msu.edu/psc/ps/EMPLOYEE/SA/c/NUI_FRAMEWORK.PT_LANDINGPAGE.GBL?&\"\n",
+    "url = \"https://student.msu.edu/splash.html\"\n",
     "driver.get(url)\n",
+    "\n",
+    "element = driver.find_element(By.ID, 'loginUrl1') \n",
+    "element.click()\n",
     "time.sleep(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "deb9bbe0-7467-4e6e-880b-eeb692019df6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your MSU email: \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " danganh1@msu.edu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your password: \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Signing in\n",
     "element = driver.find_element(By.ID, 'input28') \n",
@@ -301,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c8919a8c-808e-43cc-80ea-15832d4d3c3c",
    "metadata": {},
    "outputs": [],
@@ -321,32 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b0f6af5a-0eff-4f74-9882-154dd00f16ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your SMS code: \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 1234\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Enter SMS code\n",
     "element = driver.find_element(By.TAG_NAME, \"input\") \n",
     "print(\"Please enter your SMS code: \")\n",
     "code = input()\n",
     "element.send_keys(code)\n",
-    "\n",
+    " \n",
     "element = driver.find_element(By.CLASS_NAME, 'o-form-button-bar')  \n",
     "element.click()\n",
     "time.sleep(5)"
@@ -361,9 +331,18 @@
    },
    "outputs": [],
    "source": [
-    "element =  driver.find_element(By.ID, \"win36divPTGP_APP_WRK_PTGP_TILE_HTML_GBgrp\")\n",
-    "element.click()\n",
-    "time.sleep(5)\n",
+    "try:\n",
+    "    element = driver.find_element(By.ID, \"win0groupletPTNUI_LAND_REC_GROUPLET$1\")  \n",
+    "    element.click()\n",
+    "    time.sleep(5)\n",
+    "except: # In case the website want to login again\n",
+    "    element = driver.find_element(By.ID, 'loginUrl1') \n",
+    "    element.click()\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    element = driver.find_element(By.ID, \"win0groupletPTNUI_LAND_REC_GROUPLET$1\")  \n",
+    "    element.click()\n",
+    "    time.sleep(5)\n",
     "\n",
     "element = driver.find_element(By.ID, 'SCC_LO_FL_WRK_SCC_VIEW_BTN$2')  \n",
     "element.click()\n",
@@ -378,7 +357,7 @@
     "    semester = cell.find(\"a\", class_=\"ps-link\")\n",
     "    semesters[semester.text] = semester.get(\"href\")\n",
     "\n",
-    "url = semesters[\"Summer Semester 2024\"]\n",
+    "url = semesters[\"Fall Semester 2024\"]\n",
     "driver.execute_script(url);\n",
     "time.sleep(5)\n",
     "\n",
@@ -397,6 +376,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "body = driver.page_source\n",
+    "soup = BeautifulSoup(body, 'html.parser')\n",
+    "\n",
+    "# get the number of results\n",
+    "result_element = soup.find('span', id='MSU_RSLT_NAV_WK_PTPG_ROWS_GRID')\n",
+    "# Extract the text content\n",
+    "result_text = result_element.get_text(strip=True)\n",
+    "result = int(result_text.split()[0])\n",
+    "pages = (result + 49) // 50# get the number of aggregated pages\n",
+    "\n",
     "def get_advanced_info(soup):\n",
     "    loc = None\n",
     "    email = None\n",
@@ -411,6 +400,7 @@
     "        string = values[5].split('Instructor:')\n",
     "    else:\n",
     "        return None, None, None\n",
+    "    \n",
     "    loc = string[0]\n",
     "    a_elements = soup.find_all('a')\n",
     "    for a_element in a_elements:\n",
@@ -438,23 +428,34 @@
     "    location = []\n",
     "    emails = []\n",
     "    names = []\n",
-    "    for i in range(len(df)):\n",
-    "        rowname = f\"DESCR100$0_row_{i}\"\n",
-    "        print(rowname)\n",
-    "        element = driver.find_element(By.ID, rowname) \n",
-    "        driver.execute_script(\"arguments[0].click();\", element)\n",
-    "        time.sleep(2)\n",
-    "        driver.switch_to.frame(0)\n",
-    "        body = driver.page_source\n",
-    "        soup = BeautifulSoup(body, 'html.parser')\n",
-    "        loc, email, name = get_advanced_info(soup)\n",
-    "        location.append(loc)\n",
-    "        emails.append(email)\n",
-    "        names.append(name)\n",
-    "        cancel_cmd=\"javascript:doUpdateParent(document.win9,'#ICCancel');\"\n",
-    "        driver.execute_script(cancel_cmd);\n",
-    "        driver.switch_to.default_content();\n",
-    "        time.sleep(2)\n",
+    "    for i in range(pages):\n",
+    "        for i in range(50):\n",
+    "            try:\n",
+    "                rowname = f\"DESCR100$0_row_{i}\"\n",
+    "                element = driver.find_element(By.ID, rowname) \n",
+    "                print(rowname)\n",
+    "            except:\n",
+    "                break\n",
+    "            driver.execute_script(\"arguments[0].click();\", element)\n",
+    "            time.sleep(5) # If too slow can change this line\n",
+    "            driver.switch_to.frame(0)\n",
+    "            body = driver.page_source\n",
+    "            soup = BeautifulSoup(body, 'html.parser')\n",
+    "            loc, email, name = get_advanced_info(soup)\n",
+    "            location.append(loc)\n",
+    "            emails.append(email)\n",
+    "            names.append(name)\n",
+    "            cancel_cmd=\"javascript:doUpdateParent(document.win9,'#ICCancel');\"\n",
+    "            driver.execute_script(cancel_cmd);\n",
+    "            driver.switch_to.default_content();\n",
+    "            time.sleep(5) # If too slow can change this line\n",
+    "        \n",
+    "        if pages-1 != i:\n",
+    "            url = f\"javascript:submitAction_win9(document.win9,'MSU_RSLT_NAV_WK_SEARCH_CONDITION2$46$');\"\n",
+    "            driver.execute_script(url)\n",
+    "            time.sleep(5)\n",
+    "        else:\n",
+    "            break\n",
     "        \n",
     "    df['Location'] = location\n",
     "    df['email'] = emails\n",
@@ -471,7 +472,16 @@
    },
    "outputs": [],
    "source": [
-    "df = add_info(df)\n",
+    "df = add_info(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4efc555-5b9d-46e6-a967-83e91ae2cb58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df"
    ]
   },
@@ -482,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Spring2024.csv\", index=False)"
+    "df.to_csv(\"Fall2024.csv\", index=False)"
    ]
   }
  ],
