--- a/Dynamic_Scraper.ipynb
+++ b/Dynamic_Scraper.ipynb
@@ -274,8 +274,8 @@
     "            break\n",
     "        schedule_ls.append(div)\n",
     "        \n",
-    "    date_tds = soup.find_all(\"td\", class_=\"ps_grid-cell E_HTMLAREA2\") # Find class date\n",
-    "    loc_ins_tds = soup.find_all(\"td\", class_=\"ps_grid-cell E_HTMLAREA3\") # Find class location, instructor, and mode\n",
+    "    date_tds = soup.find_all(\"td\", class_=\"ps_grid-cell E_HTMLAREA2\") # Find class dates\n",
+    "    loc_ins_tds = soup.find_all(\"td\", class_=\"ps_grid-cell E_HTMLAREA3\") # Find class locations, instructors, and modes\n",
     "\n",
     "    if not loc_ins_tds: # If these cannot be found, return all None\n",
     "        return None, None, None, None, None, None\n",
@@ -287,27 +287,27 @@
     "    names = []\n",
     "    emails = []\n",
     "    for i in range(len(loc_ins_tds)):\n",
-    "        # Separate multiple schedules with '\\n'\n",
+    "        # Append multiple schedules to a list\n",
     "        schedule_div = schedule_ls[i].find('div', class_=\"ps-htmlarea\")\n",
     "        schedules.append(schedule_div.get_text(strip=True))\n",
     "        \n",
-    "        # Separate multiple dates with '\\n'\n",
+    "        # Append multiple dates to a list\n",
     "        date_div = date_tds[i].find('div', class_=\"ps-htmlarea\")\n",
     "        dates.append(date_div.get_text(strip=True))\n",
     "\n",
-    "        # Separate multiple locations and modes with '\\n'\n",
+    "        # Append multiple locations and modes to lists\n",
     "        loc_ins_div = loc_ins_tds[i].find('div', class_=\"ps-htmlarea\")\n",
     "        txt = loc_ins_div.get_text(strip=True, separator='\\n')\n",
     "        locs.append(txt.split('\\n')[0])\n",
     "        modes.append(txt.split('\\n')[-1])\n",
     "\n",
-    "        # Deal with classes that have multiple professors\n",
+    "        # Append multiple professors in different schedules to lists\n",
     "        a_elements = loc_ins_div.find_all(\"a\")\n",
     "        if not a_elements:\n",
     "            continue\n",
     "        email_ind = ''\n",
     "        name_ind = ''\n",
-    "        for a_element in a_elements:\n",
+    "        for a_element in a_elements: # If one schedule of the class has more than 1 professor, separate with '\\n'\n",
     "            # Extract the email address from the href attribute\n",
     "            email_ind += a_element['href'].split(':')[1] + '\\n'\n",
     "            name_ind += a_element.text + '\\n'\n",
@@ -356,7 +356,7 @@
     "            cancel_cmd=\"javascript:doUpdateParent(document.win9,'#ICCancel');\" \n",
     "            driver.execute_script(cancel_cmd); # Close the frame\n",
     "            driver.switch_to.default_content(); # Switch to the main page\n",
-    "            time.sleep(2) # If too slow can change this line\n",
+    "            time.sleep(2)\n",
     "        \n",
     "        if pages-1 != i: # If there's more pages, click Next\n",
     "            url = f\"javascript:submitAction_win9(document.win9,'MSU_RSLT_NAV_WK_SEARCH_CONDITION2$46$');\"\n",
@@ -395,6 +395,7 @@
    "outputs": [],
    "source": [
     "def make_courses_df(df): \n",
+    "    # Explode all these columns, will result in duplicate rows for classes that have multiple schedules\n",
     "    df = df.explode(['Schedule', 'Dates', 'Location', 'Mode', 'email', 'Instructor'])\n",
     "            \n",
     "    df[['Days', 'Time']] = df['Schedule'].str.split(':',n=1,expand=True)\n",
