Add Title for notebook

--- a/Make_Timetable.ipynb
+++ b/Make_Timetable.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "331fdacf-0c7a-46ea-887e-39f074fa922b",
+   "metadata": {},
+   "source": [
+    "# Make Timetable\n",
+    "This notebook take in a courses data frame, convert it into a timetable and make a schedule heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2bc221a5-5e95-498a-93f7-6a0ac75a0cda",
@@ -429,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c76a74c0-0621-46cf-8789-3c0b4fdd695c",
    "metadata": {},
    "outputs": [
@@ -483,9 +492,9 @@
     "    \n",
     "    # Plot heatmap\n",
     "    plt.title(f'Schedule Heatmap for {name}')\n",
-    "    sns.heatmap(weektable, cmap='coolwarm', linewidths=0.5, linecolor='white')\n",
-    "    plt.yticks(va='bottom')\n",
-    "    plt.tick_params(axis='y', length=0)\n",
+    "    sns.heatmap(weektable, cmap='coolwarm', linewidths=0.5, linecolor='white') # Make heatmap with gridlines\n",
+    "    plt.yticks(va='bottom') # Push the label up \n",
+    "    plt.tick_params(axis='y', length=0) # Get rid of the ticks markers\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    return weektable\n",
