Use Login.py to login to SIS

--- a/Scrape_by_Instructors.ipynb
+++ b/Scrape_by_Instructors.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b5d43c3e-11f1-49d9-a8ed-1705c8b629aa",
    "metadata": {},
    "outputs": [],
@@ -30,89 +30,66 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from getpass import getpass\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "from Login import login_to_SIS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c85a3e29-0877-4f24-ac08-3516e0c09197",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your MSU email: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " danganh1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your password: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your SMS code: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 651002\n"
+     ]
+    }
+   ],
    "source": [
     "# FireFox Driver\n",
     "driver = webdriver.Firefox()\n",
-    "time.sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03c4e321-4bde-4cab-952e-a4b7e346d380",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://student.msu.edu/splash.html\"\n",
-    "driver.get(url)\n",
-    "\n",
-    "element = driver.find_element(By.ID, 'loginUrl1') # Hit the login button\n",
-    "element.click() \n",
-    "time.sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b32c98a7-4bbf-4a9b-b165-9d2e2a52288e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Signing in\n",
-    "element = driver.find_element(By.ID, 'input28') # Find the MSU email input\n",
-    "if not element.get_attribute('value'):\n",
-    "    print(\"Please enter your MSU email: \")\n",
-    "    email = input()\n",
-    "    element.send_keys(email)\n",
-    "    \n",
-    "element = driver.find_element(By.ID, 'input36') # Find the password input\n",
-    "print(\"Please enter your password: \")\n",
-    "password = getpass()\n",
-    "element.send_keys(password)\n",
-    "\n",
-    "element = driver.find_element(By.CLASS_NAME, 'o-form-button-bar') # Click Sign in\n",
-    "element.click()\n",
-    "time.sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "373768dc-155d-4b2c-acaf-21e5df703d77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finding the authentication method by phone, might not be in the right window\n",
-    "# If not in the right window, click 'Verify with something else'\n",
-    "# If there's an error, run the cell again\n",
-    "time.sleep(5)\n",
-    "buttons = driver.find_elements(By.CLASS_NAME, 'authenticator-button')\n",
-    "for button in buttons:\n",
-    "    if button.get_attribute('data-se') == 'phone_number':\n",
-    "        button.click() # Click on authenticate by phone\n",
     "time.sleep(5)\n",
     "\n",
-    "element = driver.find_element(By.TAG_NAME, 'input')  \n",
-    "element.click() # Click on Receive code via SMS\n",
-    "time.sleep(5)\n",
-    "\n",
-    "element = driver.find_element(By.TAG_NAME, \"input\") # Find the code input\n",
-    "print(\"Please enter your SMS code: \")\n",
-    "code = input() \n",
-    "element.send_keys(code)\n",
-    " \n",
-    "element = driver.find_element(By.CLASS_NAME, 'o-form-button-bar') # Click Verify\n",
-    "element.click()\n",
-    "time.sleep(5)"
+    "login_to_SIS(driver)"
    ]
   },
   {
