Fix switch_to_semester function

--- a/Dynamic_Scraper.ipynb
+++ b/Dynamic_Scraper.ipynb
@@ -90,8 +90,7 @@
     "driver = get_driver('Firefox')\n",
     "time.sleep(5)\n",
     "wait = WebDriverWait(driver, 10)\n",
-    "login_to_SIS(driver)\n",
-    "semesters_list, previous_semesters, current_semesters = get_semesters_list(driver)"
+    "login_to_SIS(driver)"
    ]
   },
   {
@@ -1768,7 +1767,7 @@
    ],
    "source": [
     "def scrape_by_semester(driver, search_semester):\n",
-    "    switch_to_semester(driver, search_semester, previous_semesters)\n",
+    "    switch_to_semester(driver, search_semester)\n",
     "    element = driver.find_element(By.ID, 'MSU_CLSRCH_WRK2_SUBJECT')  \n",
     "    element.send_keys(\"CMSE\") #pick cmse for example\n",
     "    url = f\"javascript:submitAction_win9(document.win9,'MSU_CLSRCH_WRK_SSR_PB_SEARCH');\"\n",
