Deal with 1-page result

--- a/Dynamic_Scraper.ipynb
+++ b/Dynamic_Scraper.ipynb
@@ -140,11 +140,14 @@
    "source": [
     "def get_info(driver):\n",
     "    '''Scrape entire page for all of the class boxes'''\n",
-    "    per_page = int(driver.find_element(By.ID, 'MSU_RSLT_NAV_WK_NUM2').text)\n",
-    "    result_element = driver.find_element(By.ID, 'MSU_RSLT_NAV_WK_PTPG_ROWS_GRID').text\n",
-    "    result = int(result_element.split()[0])\n",
-    "    pages = (result + per_page - 1) // per_page # get the number of aggregated pages\n",
-    "    \n",
+    "    try:\n",
+    "        per_page = int(driver.find_element(By.ID, 'MSU_RSLT_NAV_WK_NUM2').text)\n",
+    "        result_element = driver.find_element(By.ID, 'MSU_RSLT_NAV_WK_PTPG_ROWS_GRID').text\n",
+    "        result = int(result_element.split()[0])\n",
+    "        pages = (result + per_page - 1) // per_page # get the number of aggregated pages\n",
+    "    except:\n",
+    "        pages = 1\n",
+    "        \n",
     "    reshaped_list = []\n",
     "    counter = 1\n",
     "    while True:\n",
