Update to fit new get_semester_list function

--- a/Dynamic_Scraper.ipynb
+++ b/Dynamic_Scraper.ipynb
@@ -81,7 +81,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 814526\n"
+      " 751206\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "time.sleep(3)\n",
     "wait = WebDriverWait(driver, 20)\n",
     "login_to_SIS(driver, authenticate=\"Okta\")\n",
-    "semesters_list, previous_semesters, current_semesters = get_semesters_list(driver)"
+    "semesters_list, previous_semesters = get_semesters_list(driver)"
    ]
   },
   {
@@ -105,7 +105,6 @@
     "    '''\n",
     "    print(element.get_attribute('id'))\n",
     "    driver.execute_script(\"arguments[0].click();\", element) # Click on cell\n",
-    "    # wait.until(EC.frame_to_be_available_and_switch_to_it(0)) \n",
     "    iframe = wait.until(EC.presence_of_element_located((By.TAG_NAME, 'iframe'))) # Switch to Class Description frame\n",
     "    driver.switch_to.frame(iframe)\n",
     "    wait.until(EC.element_to_be_clickable((By.ID, \"MSU_CLS_DTL_WK2_SSR_CL_DTLS_LFF$5$_LBL\"))) # Wait until Availability is clickable\n",
