--- a/Scrape_by_Instructors.ipynb
+++ b/Scrape_by_Instructors.ipynb
@@ -46,7 +46,7 @@
     "time.sleep(3)\n",
     "wait = WebDriverWait(driver, 20)\n",
     "login_to_SIS(driver, authenticate='Phone')\n",
-    "semesters_list, previous_semesters, current_semesters = get_semesters_list(driver)"
+    "semesters_list, previous_semesters = get_semesters_list(driver)"
    ]
   },
   {
