Add title for notebook

--- a/Course_Catalogue_Scraper.ipynb
+++ b/Course_Catalogue_Scraper.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a9434f06-04d6-4be2-8a57-a7f1a002b57f",
+   "metadata": {},
+   "source": [
+    "# Course Catalogue Scraper\n",
+    "\n",
+    "This notebook scrapes the MSU Course Description website and returns general course information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "17940220-e885-4696-9dfa-c4a8ac0fd2c1",
